# Embedded_System_Smartwatch

./: .gitignore  README.md  分工.md  工作原理.md  提交要求说明.md  注意事项-修改版.md  物料清单.docx  简要原理和工作流程.md  系统设计文档.md  配置指南.md  项目计划书.md  题目.md
Embedded_System_Smartwatch/: CMakeLists.txt  README.md.md  README_FIRMWARE.md
Embedded_System_Smartwatch/Android_app/: BuildRelease.cs  BuildRelease.java  FindAndRun.java  GenKey.java  KeytoolRunner.cs  MakeKey.java  Runner.cs  build.gradle.kts  build_output.txt  build_release.ps1  build_release_apk.bat  do_build.bat  gen_release.ps1  gradle-build-info.txt  gradle-build.txt  gradle.properties  make_key.ps1  release.keystore  run_build.ps1  run_build2.bat  run_gradle.ps1  settings.gradle.kts  一键生成Release版APK.bat
Embedded_System_Smartwatch/Android_app/app/: build.gradle.kts
Embedded_System_Smartwatch/Android_app/app/debug/: output-metadata.json
Embedded_System_Smartwatch/Android_app/app/release/: output-metadata.json
Embedded_System_Smartwatch/Android_app/gradle/: libs.versions.toml
Embedded_System_Smartwatch/Android_app/gradle/wrapper/: gradle-wrapper.properties
Embedded_System_Smartwatch/Phase0_HC05Setting/: .mxproject  CMakeLists.txt  Phase0_HC05Setting.ioc  README.md  gdbClient_log.txt
Embedded_System_Smartwatch/Phase0_HC05Setting/Core/Inc/: gpio.h  hc05_at.h  main.h  stm32f1xx_it.h  usart.h
Embedded_System_Smartwatch/Phase0_HC05Setting/Core/Src/: gpio.c  hc05_at.c  main.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c  usart.c
Embedded_System_Smartwatch/Phase0_HC05Setting/USB_DEVICE/App/: usbd_cdc_if.c
Embedded_System_Smartwatch/Phase0_HC05Setting/cmake/stm32cubemx/: CMakeLists.txt
Embedded_System_Smartwatch/Phase0_HC05Setting/hc05_at_host/: hc05_at_host.py
Embedded_System_Smartwatch/Phase0_HC05Setting/hc05_at_host/static/: app.css  app.js
Embedded_System_Smartwatch/Phase1_OLED/: CMakeLists.txt  Phase1_OLED.ioc  README.md
Embedded_System_Smartwatch/Phase1_OLED/.claude/: settings.json
Embedded_System_Smartwatch/Phase1_OLED/python/: gen_font_12x12.py
Embedded_System_Smartwatch/Phase2_MPU6050/: CMakeLists.txt  Phase2_MPU6050.ioc  README.md
Embedded_System_Smartwatch/Phase2_MPU6050/.claude/: settings.json
Embedded_System_Smartwatch/Phase3_Bluetooth/: .gitignore  .mxproject  CMakeLists.txt  Phase3_Bluetooth.ioc  README.md
Embedded_System_Smartwatch/Phase3_Bluetooth/.claude/: settings.json
Embedded_System_Smartwatch/Phase3_Bluetooth/smartwatch_bt_host/: README.md  ble_host.py  ble_probe.py  bt_protocol.py
Embedded_System_Smartwatch/Phase4_FreeRTOS/: README.md  README_INTEGRATION.md
Embedded_System_Smartwatch/Phase5_Advanced/: README.md
Embedded_System_Smartwatch/cmake/: gcc-arm-none-eabi.cmake
Embedded_System_Smartwatch/src/: main.c  phase0_entry.c  phase1_entry.c  phase2_entry.c  phase3_entry.c
(+49 files in other folders)
